[package]
name = "find-arc-orphans"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[dependencies]
crc = "1.0"
time = "0.1"
libc = "0.2.51"
zstd = "0.4"
memmap = "0.7"
env_logger = "0.6.1"
packed_struct = "0.3"
packed_struct_codegen = "0.3"
lazy_static = "1.4"
cached = "0.11"
timeit = "0.1.2"
rayon = "1.3"
structopt = "0.3.11"
binwrite = "0.2.1"

[features]
print = []

[profile.release]
debug = true

[build-dependencies]
crc = "1.0"

